# MelloOS

./: .gdbinit  .gitignore  CHANGELOG.md  Makefile  README.md  STUB_FILES_INVENTORY.md  TECHNICAL_DEBT_CATEGORIZED.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/docs/: SECURITY_IMPLEMENTATION.md
kernel/src/: config.rs  framebuffer.rs  init_loader.rs  log.rs  main.rs  metrics.rs  panic.rs  serial.rs
kernel/src/arch/: mod.rs
kernel/src/dev/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/fs/: block_dev.rs  mod.rs  syscalls.rs  syscalls_test.rs  test_simple.rs
kernel/src/io/: bio.rs  devtree.rs  irq.rs  mmio.rs  mod.rs  port.rs  test_integration.rs
kernel/src/mm/: allocator.rs  log.rs  mmap.rs  mod.rs  paging.rs  pmm.rs  refcount.rs  security.rs  tlb.rs
kernel/src/sched/: context.rs  mod.rs  priority.rs  process_group.rs  task.rs  timer.rs
kernel/src/signal/: mod.rs  security.rs
kernel/src/sync/: lock_ordering.rs  mod.rs  seqlock.rs  spin.rs
kernel/src/sys/: ioctl.rs  ipc.rs  mod.rs  port.rs  syscall.rs
kernel/src/user/: elf.rs  exec.rs  integration_tests.rs  launch.rs  mod.rs  process.rs
kernel/userspace/.cargo/: config.toml
kernel/userspace/disk_bench/: Cargo.toml  linker.ld
kernel/userspace/diskinfo/: Cargo.toml
kernel/userspace/dmesg/: Cargo.toml  linker.ld
kernel/userspace/fs_test/: Cargo.toml  linker.ld
kernel/userspace/init/: Cargo.toml  linker.ld
kernel/userspace/irq_test/: Cargo.toml  linker.ld
kernel/userspace/kbd_test/: Cargo.toml  linker.ld
kernel/userspace/lsdev/: Cargo.toml
kernel/userspace/mello-sh/: Cargo.toml  (+1 more)
(+302 files in other folders)
